# megaMM

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
configs/: config.json  universe.json
src/megamm/: cli.py  config.py  dataset.py  paths.py
src/megamm/backtest/: metrics.py  walkforward.py
src/megamm/data/: download.py  quality.py
src/megamm/debug/: inspect_model.py
src/megamm/engine/: predict_latest.py
src/megamm/features/: build.py  compute.py  normalize.py  schema.py
src/megamm/models/: artifacts.py  math.py  params.py  predict.py  train.py  transition.py
src/megamm/reporting/: __init__.py  charts.py  console.py  stats.py
